refactor: decouple search logic from myanimelist